--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,44 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap");
 body {
-	font-family: 'Poppins', sans-serif;
+	font-family: "Poppins", sans-serif;
+}
+/* global css */
+.bg-accent {
+	background-color: #5a20cb;
+}
+.btn-accent-outline {
+	border-color: #5a20cb;
+	color: #5a20cb;
+}
+.btn-accent-outline:hover {
+	background-color: #5a20cb;
+	color: #fff;
+}
+
+/* navbar area */
+.navbar-brand {
+	font-style: normal;
+	font-weight: 600;
+	font-size: 40px;
+	line-height: 60px;
+	text-align: center;
+	color: #4a4a4a;
+}
+.nav-link {
+	font-size: 18px;
+}
+.nav-link:hover,
+.navbar-nav .nav-link.active {
+	color: #5a20cb;
+}
+/* footer */
+
+.fo-ttile h3 {
+	font-style: normal;
+	font-weight: 600;
+	font-size: 40px;
+	line-height: 60px;
+}
+.cpy-link {
+	color: #fff;
 }
