--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,12 @@ body {
 /* global css */
 .bg-accent {
 	background-color: #1b98f5;
+	opacity: 1;
+}
+.bg-accent:hover{
+	background-color: #1b98f5;
+	opacity: 0.8;
+	border-color: #1b98f5;
 }
 .btn-accent-outline {
 	border-color: #1b98f5;
@@ -13,6 +19,22 @@ body {
 .btn-accent-outline:hover {
 	background-color: #1b98f5;
 	color: #fff;
+}
+.mb-130{
+	margin-bottom: 130px;
+}
+.section-title h2{
+	font-style: normal;
+	font-weight: 600;
+	font-size: 45px;
+	line-height: 60px;
+	color: #1D1D1D;
+}
+.section-info p{
+	font-weight: 400;
+	font-size: 16px;
+	line-height: 30px;
+	color: #777777;
 }
 
 /* navbar area */
@@ -43,12 +65,35 @@ body {
 	font-weight: 600;
 	font-size: 65px;
 	line-height: 85px;
-	/* or 131% */
-
 	text-align: center;
-
 	color: #ffffff;
 }
+
+/* course area */
+.course-title{
+font-style: normal;
+font-weight: 600;
+font-size: 25px;
+line-height: 38px;
+color: #4A4A4A;
+}
+.course-info p{
+font-style: normal;
+font-weight: 400;
+font-size: 16px;
+line-height: 24px;
+color: #777777;
+}
+.price p{
+	color: #1b98f5;
+}
+/* ex-learningarea */
+.elear-info{
+	background: #F4FAFD;
+}
+
+
+
 
 /* footer */
 
@@ -78,6 +123,9 @@ body {
 		font-weight: 600;
 		font-size: 40px;
 		line-height: 50px;
+	}
+	.mb-130{
+		margin-bottom: 60px;
 	}
     
 }
