--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,12 @@ body {
 /* global css */
 .bg-accent {
 	background-color: #1b98f5;
+}
+.btn-accent {
+	background-color: #1b98f5;
 	opacity: 1;
 }
-.bg-accent:hover{
+.btn-accent:hover{
 	background-color: #1b98f5;
 	opacity: 0.8;
 	border-color: #1b98f5;
@@ -20,21 +23,29 @@ body {
 	background-color: #1b98f5;
 	color: #fff;
 }
+.font-accent-color{
+	color: #1b98f5;
+}
 .mb-130{
 	margin-bottom: 130px;
+}
+.accent-text-title{
+	color: #1D1D1D;
+}
+.accent-text{
+	color: #777777;
 }
 .section-title h2{
 	font-style: normal;
 	font-weight: 600;
 	font-size: 45px;
 	line-height: 60px;
-	color: #1D1D1D;
 }
 .section-info p{
 	font-weight: 400;
 	font-size: 16px;
 	line-height: 30px;
-	color: #777777;
+	
 }
 
 /* navbar area */
@@ -127,7 +138,10 @@ color: #777777;
 	.mb-130{
 		margin-bottom: 60px;
 	}
-    
+    .section-title h2{
+		font-size: 30px;
+		line-height: 45px;
+	}
 }
 @media (max-width: 767.98px) {
     .hero-carousel .carousel-caption {
@@ -147,4 +161,7 @@ color: #777777;
         height: 3em;
         overflow: hidden;
     }
+	.img-md-fluid{
+		max-width: 100%;
+	}
  }
